<resources>

    <string name="app_name_currency">Currency converter</string>
    <string name="enter_amount">Enter amount…</string>
    <string name="source_currency">Source Currency:</string>
    <string name="destination_currency">Destination Currency:</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="save_conversion">Save Conversion</string>
    <string name="view_saved_conversions">View Saved Conversions</string>
    <string name="title_saved_conversions">Saved Conversions</string>
    <string name="button_remove_query">Remove Query</string>
    <string name="snackbar_query_removed">Query removed!</string>
    <string name="snackbar_undo_removal">Undo</string>
    <string name="toast_conversion_saved">Conversion saved</string>
    <string name="toast_no_conversion_to_save">No conversion to save</string>
    <string name="dialog_title_delete_conversion">Delete Conversion</string>
    <string name="dialog_message_delete_conversion">Are you sure you want to delete this conversion?</string>
    <string name="toast_conversion_deleted">Conversion deleted</string>
    <string name="snackbar_conversion_deleted">Conversion deleted</string>
    <string name="snackbar_undo_action">UNDO</string>
    <string name="toast_conversion_restored">Conversion restored</string>
    <string name="back_main_menu">Main Menu</string>
    <string name="error_server">Server error, please try again later.</string>
    <string name="error_invalid_input">Invalid input. Please check your entries.</string>
    <string name="query">Query</string>
    <string name="results">Results</string>
    <string name="converted_amount">Converted Amount %1$.2f</string>
    <string name="action_help_currency">Help</string>
    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_message">
    Welcome to Currency Converter!\n
    \n
    1. Enter the amount you wish to convert in the input field.\n
    2. Select the source currency from the Source Currency dropdown list.\n
    3. Select the destination currency from the Destination Currency dropdown list.\n
    4. Click the Convert button to see the result.\n
    5. If you wish to save the conversion, click the Save Conversion button.\n
    6. To view saved conversions, click the View Saved Conversions button.\n
    \n
    Enjoy your usage!\n


</string>
    <string name="aud_description">Australian Dollar</string>
    <string name="brl_description">Brazilian Real</string>
    <string name="cad_description">Canadian Dollar</string>
    <string name="cny_description">Chinese Renminbi</string>
    <string name="eur_description">European Euro</string>
    <string name="hkd_description">Hong Kong Dollar</string>
    <string name="inr_description">Indian Rupee</string>
    <string name="idr_description">Indonesian Rupiah</string>
    <string name="jpy_description">Japanese Yen</string>
    <string name="myr_description">Malaysian Ringgit</string>
    <string name="mxn_description">Mexican Peso</string>
    <string name="nzd_description">New Zealand Dollar</string>
    <string name="nok_description">Norwegian Krone</string>
    <string name="pen_description">Peruvian Nuevo Sol</string>
    <string name="rub_description">Russian Ruble</string>
    <string name="sar_description">Saudi Riyal</string>
    <string name="sgd_description">Singapore Dollar</string>
    <string name="zar_description">South African Rand</string>
    <string name="krw_description">South Korean Won</string>
    <string name="sek_description">Swedish Krona</string>
    <string name="chf_description">Swiss Franc</string>
    <string name="twd_description">Taiwanese Dollar</string>
    <string name="thb_description">Thai Baht</string>
    <string name="try_description">Turkish Lira</string>
    <string name="gbp_description">UK Pound Sterling</string>
    <string name="usd_description">US Dollar</string>
    <string name="vnd_description">Vietnamese Dong</string>


    <string name="app_name_bear">Bear Image Generator</string>
    <string name="describe_image_here">Description of the image</string>
    <string name="save_bear">Save Image</string>
    <string name="bear_image_button">Bear Image Button</string>
    <string name="enter_width">Enter Width</string>
    <string name="enter_height">Enter Height</string>
    <string name="generate_image">Generate Image</string>
    <string name="show_saved_images">Show Saved Images</string>
    <string name="toast_message_1">Please enter width and height</string>
    <string name="toast_message_2">Width and height must be positive numbers</string>
    <string name="toast_message_3">Image is being generated...</string>
    <string name="toast_message_4">Opening saved images...</string>
    <string name="toast_message_5">Saved images loaded</string>
    <string name="dialog_title">Delete image?</string>
    <string name="dialog_message">Do you want to delete this image?</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="snackbar_message">Image deleted successfully</string>
    <string name="dialog_message_1">Do you want to save this image?</string>
    <string name="snackbar_message_1">Image saved successfully</string>
    <string name="snackbar_saved_images_loaded">Saved images loaded</string>
    <string name="snackbar_message_2">Failed to load image</string>

    <string name="action_help_bear">Help</string>
    <string name="help_title">Help</string>
    <string name="help_message_image_activity">This is ImageActivity. Here you can view and save images with specified dimensions.</string>

    <string name="help_message_new_activity">This is NewActivity. Here you can specify the dimensions of the image to generate.</string>

    <string name="help_message_saved_images_activity">This is SavedImagesActivity. Here you can view and delete your saved images.</string>

    <string name="app_name">FinalProject</string>

    <string name="ediText">Enter airport code</string>
    <string name="name_of_flight">Name of airline</string>
    <string name="destination">Destination</string>
    <string name="delay">How long the delay is</string>
    <string name="Terminal">Drop-off point</string>
    <string name="gate">The planes location</string>
    <string name="aviationbtn">Aviation Button</string>
    <string name="Click">Press here</string>
  
    <string name="select_a_topic">Select quiz topic</string>
    <string name="select_topic_prompt">"topic "</string>
    <string name="select_the_number_of_questions">Number of question</string>
    <string name="enter_the_number_of_questions">Enter the no. of Questions</string>
    <string name="start_quiz">quiz</string>
    <string name="quiz_download">Download</string>
    <string name="question">Question</string>
    <string name="top_10_high_scores">High Score</string>
    <string name="str_next">Next</string>
    <string name="str_previous">Previous</string>
    <string name="score">Your Score</string>
    <string name="finish">Finish</string>
    <string name="str_enter_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="str_no_data_found">No data found</string>

</resources>

