<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView_from_currency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_currency"
        android:layout_marginBottom="8dp"
        android:textSize="16dp"/>

    <Spinner
        android:id="@+id/spinner_from_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView_to_currency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_currency"
        android:layout_marginBottom="8dp"
        android:textSize="16dp" />

    <Spinner
        android:id="@+id/spinner_to_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        tools:text="Result: "
        android:layout_marginBottom="16dp"
        android:textSize="18dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_conversion"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_view_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_saved_conversions" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>
